<resources>
    <string name="app_name">PizzaClient</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!-- Navigation Menu -->
    <string name="drawer_open">Navigation Drawer Open</string>
    <string name="drawer_close">Navigation Drawer Close</string>

    <string name="nav_menu_orders">My Orders</string>
    <string name="nav_menu_delivery">Delivery address</string>
    <string name="nav_menu_shopping_cart">Shopping cart</string>

    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_logout">Log out</string>

    <!-- Home Screen -->
    <string name="home_toolbar_name">My delivery app</string>
    <string name="home_menu_shopping_cart">Shopping cart</string>
    <string name="product_price">%1$.2f RON</string>
    
    <!-- Detailed product screen -->
    <string name="detailed_ingredients_title">Ingredients:</string>
    <string name="detailed_quantity_title">Quantity</string>
    <string name="detailed_total_title">Total</string>
    <string name="detailed_currency">RON</string>

    <!-- Shopping cart screen-->
    <string name="cart_toolbar_title">Shopping cart</string>
    <string name="cart_total">TOTAL:</string>
    <string name="cart_address">Delivery address:</string>

    <!-- Delivery address screen -->
    <string name="address_title">Delivery addresses</string>
    <string name="address_select">Select delivery address</string>
    <string name="address_city">City</string>
    <string name="address_street">Street</string>
    <string name="address_number">Number</string>
    <string name="address_phone">Mobile phone</string>

    <!-- Orders screen-->
    <string name="orders_title">My orders</string>
    <string name="orders_date">Date:</string>
    <string name="orders_total">Total:</string>
    <string name="orders_status">Status:</string>
    <string name="orders_counter">%1$d.</string>

</resources>
