<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_group_user">
        <item
            android:id="@+id/nav_menu_orders"
            android:title="@string/nav_menu_orders" />
        <item
            android:id="@+id/nav_menu_delivery"
            android:title="@string/nav_menu_delivery" />
        <item
            android:id="@+id/nav_menu_shopping_cart"
            android:title="@string/nav_menu_shopping_cart" />
    </group>

    <group
        android:id="@+id/nav_group_settings">
        <item
            android:id="@+id/nav_menu_settings"
            android:title="@string/nav_menu_settings" />
        <item
            android:id="@+id/nav_menu_logout"
            android:title="@string/nav_menu_logout" />
    </group>
</menu>