<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detailed_base_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/detailed_appbar_height"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/detailed_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="@color/primary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:id="@+id/detailed_collapsing_toolbar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                app:layout_collapseMode="pin" />

            <include
                android:id="@+id/detailed_toolbar"
                layout="@layout/toolbar_home" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detailed_ingredients_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_standard"
                android:text="@string/detailed_ingredients_title"
                android:textSize="@dimen/text_primary" />

            <TextView
                android:id="@+id/detailed_ingredients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/detailed_ingredients_title"
                android:paddingEnd="@dimen/padding_standard"
                android:paddingStart="@dimen/padding_standard"
                android:text="@string/lorem"
                android:textSize="@dimen/text_primary" />

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="@dimen/padding_standard"
        android:layout_marginStart="@dimen/padding_half"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detailed_quantity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/padding_half"
            android:paddingStart="@dimen/padding_half"
            android:text="@string/detailed_quantity_title"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_primary" />

        <LinearLayout
            android:id="@+id/detailed_quantity_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/detailed_quantity_down"
                android:layout_width="@dimen/detailed_icon_size"
                android:layout_height="@dimen/detailed_icon_size"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_remove_black_24dp" />

            <TextView
                android:id="@+id/detailed_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_dark"
                android:paddingStart="@dimen/padding_half"
                android:paddingEnd="@dimen/padding_half"
                android:textSize="@dimen/text_huge" />

            <ImageView
                android:id="@+id/detailed_quantity_up"
                android:layout_width="@dimen/detailed_icon_size"
                android:layout_height="@dimen/detailed_icon_size"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_add_black_24dp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/padding_standard"
        android:gravity="center_vertical|end"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detailed_total_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailed_total_title"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_primary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detailed_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_half"
                android:textSize="@dimen/text_big" />

            <TextView
                android:id="@+id/detailed_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detailed_currency"
                android:textSize="@dimen/text_secondary" />
        </LinearLayout>


    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/detailed_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_standard"
        android:clickable="true"
        android:src="@drawable/ic_add_white_24dp"
        app:fabSize="normal"
        app:layout_anchor="@id/detailed_collapsing_toolbar"
        app:layout_anchorGravity="bottom|end" />


</android.support.design.widget.CoordinatorLayout>
