<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/address_base_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/address_appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/address_appbar_height">

        <include
            android:id="@+id/address_toolbar"
            layout="@layout/toolbar_home" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_standard">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/address_city"
                    android:layout_width="@dimen/address_text_width"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_city"
                    android:inputType="textCapWords"
                    android:textColor="@android:color/white"
                    app:backgroundTint="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/white">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/address_street"
                        android:layout_width="@dimen/address_text_width"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_street"
                        android:inputType="textCapWords"
                        android:textColor="@android:color/white"
                        app:backgroundTint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/white">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/address_number"
                        android:layout_width="@dimen/address_text_width"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_number"
                        android:inputType="textCapWords"
                        android:textColor="@android:color/white"
                        app:backgroundTint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/address_phone"
                    android:layout_width="@dimen/address_phone_text_width"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_phone"
                    android:inputType="phone"
                    android:textColor="@android:color/white"
                    app:backgroundTint="@android:color/white" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/address_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/address_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_standard"
        android:clickable="true"
        android:src="@drawable/ic_add_white_24dp"
        app:fabSize="normal"
        app:layout_anchor="@id/address_appbar"
        app:layout_anchorGravity="bottom|end" />

</android.support.design.widget.CoordinatorLayout>
